# DragonBonesDemo

./: CMakeLists.txt
Classes/: AppDelegate.cpp
Classes/GameEngine/: Brain.cpp  Brain.h  WeaponSelector.cpp  WeaponSelector.h
Classes/GameEngine/Objects/: Aim.cpp  Aim.h  Arrow.cpp  Arrow.h  Bow.cpp  Bow.h  Gate.cpp  Gate.h  Hero.cpp  Hero.h  Stickman.cpp  Stickman.h  Target.cpp  Target.h
Classes/Scenes/: Battle.cpp  Battle.h
Classes/dragonBones/: DragonBonesHeaders.h
Classes/dragonBones/animation/: Animation.cpp  Animation.h  AnimationState.cpp  AnimationState.h  BaseTimelineState.h  IAnimateble.h  TimelineState.cpp  WorldClock.h
Classes/dragonBones/armature/: Armature.cpp  Armature.h  Bone.cpp  IArmatureDisplay.h  Slot.cpp  Slot.h  TransformObject.h
Classes/dragonBones/events/: EventObject.h
Classes/dragonBones/factories/: BaseFactory.h
Classes/dragonBones/geom/: ColorTransform.h  Matrix.h  Point.h  Rectangle.h  Transform.h
Classes/dragonBones/model/: ArmatureData.h  DragonBonesData.h  FrameData.h  TimelineData.h
Classes/dragonBones/parsers/: DataParser.cpp  DataParser.h
Classes/dragonBones/textures/: TextureData.h
Resources/res/Animation/: ArcUnlim.json  texture.json
